2009-06-14  Zoltan Varga  <vargaz@gmail.com>

	* scripts/CMakeLists.txt: New file.

	* samples/CMakeLists.txt: New file, currently empty.

2009-06-12  Andreia Gaita  <avidigal@novell.com>

	* data/config.in: add libcups dllmap entry

2009-06-11  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Disable dtrace support if dtrace doesn't support the
	-h option.

2009-06-10  Marek Safar  <marek.safar@gmail.com>

	* runtime/Makefile.am, configure.in: Make net_4_0 profile optional.

2009-06-07  Marek Safar  <marek.safar@gmail.com>

	* runtime/Makefile.am: Enabled net_4_0 for compilation.

2009-05-27  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Disable USE_MUNMAP on ppc to work around #504411.

2009-05-26  Zoltan Varga  <vargaz@gmail.com>

	* CMakeLists.txt: Implement AC_OUTPUT, creation of config.make, etc.
	
	* CMakeLists.txt: implement arm fpu detection, add vfp detection as
	well.

	* CMakeLists.txt: Add arm support.

2009-05-24  Miguel de Icaza  <miguel@novell.com>

	* Disable mono/docs build if we disabled the mcs build.

2009-05-24  Zoltan Varga  <vargaz@gmail.com>

	* */CMakeLists.txt: Add beginnings of a cmake based build system.

2009-05-22  Zoltan Varga  <vargaz@gmail.com>

	* acinclude.m4 (dolt_supported): Enable dolt on sparc linux.

2009-05-17  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Add TARGET_POWERPC/POWERPC64 defines.

2009-05-09  Miguel de Icaza  <miguel@novell.com>

	* configure.in: Instead of reporting the various disabled features
	in a loop, where a keyword might fail, report the actual disabled
	features in the sections that handle them

2009-05-08  Zoltan Varga  <vargaz@gmail.com>

	* acinclude.m4 (dolt_supported): Add powerpc64.

2009-05-07  Rodrigo Kumpera  <rkumpera@novell.com>

	* runtime/Makefile.am (mcs-compileall): Pass --security=validil
	to the runtime so the assemblies are not required to be verifiable.

2009-05-06  Raja R Harinath  <harinath@hurrynot.org>

	* Makefile.am (compiler-tests): Rewrite to re-build the moon